:recycle: rename handler methods to the openapi operationId
