# handler/meeting.go
@@ -65,7 +65,7 @@ func CreateMeeting(c echo.Context) error {
 	})
 }
 
-func GetMeeting(c echo.Context) error {
+func GetMeetings(c echo.Context) error {
 	req := new(schema.GetAllMeetingsParams)
 	if err := c.Bind(req); err != nil {
 		return echo.NewHTTPError(http.StatusBadRequest, "リクエストのパースに失敗しました").SetInternal(err)
@@ -107,7 +107,7 @@ func GetMeeting(c echo.Context) error {
 
 }
 
-func GetMeetingFromID(c echo.Context) error {
+func GetMeeting(c echo.Context) error {
 	return c.String(http.StatusNotImplemented, "未実装です")
 }
 
@@ -139,6 +139,18 @@ func UpdateMeeting(c echo.Context) error {
 	return c.NoContent(http.StatusNoContent)
 }
 
-func DeleteMeetingFromID(c echo.Context) error {
+func DeleteMeeting(c echo.Context) error {
+	return c.String(http.StatusNotImplemented, "未実装です")
+}
+
+func GetMeetingComments(c echo.Context) error {
+	return c.String(http.StatusNotImplemented, "未実装です")
+}
+
+func GetMeetingReactions(c echo.Context) error {
+	return c.String(http.StatusNotImplemented, "未実装です")
+}
+
+func GetMeetingTokens(c echo.Context) error {
 	return c.String(http.StatusNotImplemented, "未実装です")
 }
