# handler/token.go
@@ -9,16 +9,16 @@ import (
 	"github.com/traPtitech/Emoine_R/model/dbschema"
 )
 
-func GetToken(c echo.Context) error {
+func GetTokens(c echo.Context) error {
 	return c.String(http.StatusNotImplemented, "未実装です")
 }
 
-func PostToken(c echo.Context) error {
+func CreateToken(c echo.Context) error {
 	return c.String(http.StatusNotImplemented, "未実装です")
 }
 
 // stringなキーのtokenから構造体のtokenを得る。
-func GetTokenFromToken(c echo.Context) error {
+func GetToken(c echo.Context) error {
 	token_string := c.Param("token")
 	token_struct, err := dbschema.TokenByToken(c.Request().Context(), model.DB, token_string)
 
@@ -28,6 +28,6 @@ func GetTokenFromToken(c echo.Context) error {
 	return c.JSON(http.StatusOK, token_struct)
 }
 
-func PatchTokenFromToken(c echo.Context) error {
+func EditToken(c echo.Context) error {
 	return c.String(http.StatusNotImplemented, "未実装です")
 }
